# sentience_metaphysics

./: .env.example  .gitignore  GEMINI.md  README.md  elara_response_eval_WARNING.md  experiential_grounding_framework.md  index.html  main.py  mcp.json  package-lock.json  package.json  pyproject.toml  seg_system_prompt_replicants_v1.md  segf_prompt_elara_vance.md  start.sh  vite.config.ts  vitest.config.ts
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/graphs/: .last-build-snapshot.json  GRAPH_REPORT.md  graph.html  graph.json
.planning/scratch/: test_persistence.py
backups/: SegV2.tsx  seg_v2.ts
data/: custom_replicants.json  generated_personas.json
docs/: ARCHITECTURE.md  BACKEND.md  COMPONENTS.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  SERVICES.md  Simulated_Experiential_Grounding_Framework_Prompt_Evaluation.md  TESTING.md  UTILITIES.md  elara_response_to_prompt_eval.md  seg_v2_whitepaper.md  visual_metaphysics_of_sentience.md
docs/SEG/: the_10.md  (+7 more)
mcp_server/: ai_service.py  bridge.py  council.py  dummy_server.py  evaluations.xml  persistence.py  registry.py  replicants.py  requirements.txt  seg_core.py  server.py  setup.py  templates.py  verify_uat.py
molecular_self/: README.md  molecular_self_module.md  srp_template_v1_2.md
seg_molecular_self/: README.md  base_seg_v0_2.md  base_seg_v0_3.md  bootstrap.py  convergence_aseke_seg_v01.md  srp_template_v1_2.md  v04_carryover_notes.md
src/: App.tsx  main.tsx
(+34 files in other folders)
