[project]
name = "sentience-metaphysics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.0.0",
    "black>=26.3.1",
    "crewai>=0.1.0",
    "mcp>=1.23.0",
    "mypy>=1.0.0",
    "pathlib>=1.0.0",
    "pydantic>=2.4.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
    "typing-extensions>=4.0.0",
    "uvloop>=0.19.0",
]
